[package]
name = "config_test"
version = "0.1.0"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
edition = "2018"
repository = "https://github.com/leocornelius/avrio_benchmarks"
description = ""
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.5.0"
log = "0.4"
[package.metadata.deb]
extended-description = ""
