[package]
name = "avrio_database_test"
version = "0.1.0"
edition = "2018"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
license = "MIT OR Apache-2.0"
[dependencies]
serde_json = "1.0.48"
avrio_database = { git = "https://github.com/avrio-project/avrio-core"}
avrio_core = { git = "https://github.com/avrio-project/avrio-core"}
cryptonight-rs = { git = "https://github.com/avrio-project/cryptonight-rs"}