[package]
name = "avrio_database_test"
version = "0.1.0"
edition = "2018"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
license = "MIT OR Apache-2.0"
[dependencies]
serde_json = "1.0.48"
avrio_blockchain = { path = "../extern/blockchain"}
avrio_database = { path = "../extern/database"}
avrio_core = { path = "../extern/core"}
cryptonight-rs = { path = "../extern/crypto/cn-rs"}