[package]
name = "txn_bench"
version = "0.1.0"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
edition = "2018"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
cryptonight-rs = { path = "../extern/cn-rs" } 
rand = "0.7.3"
indicatif = "0.14.0"
ring = "0.16.11"
simple_logger = "1.5.0"
log = "0.4"
