[package]
name = "txn_bench"
version = "0.1.0"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
edition = "2018"
repository = "https://github.com/leocornelius/avrio_benchmarks"
description = "Tests The Speed Of Transaction Validation On Your Computer"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
cryptonight-rs = { path = "../extern/cn-rs" } 
rand = "0.7.3"
indicatif = "0.14.0"
ring = "0.16.11"
simple_logger = "1.5.0"
log = "0.4"
lazy_static = "1.4.0"
[package.metadata.deb]
extended-description = "Generates A Large Number of Transactions and validates them. Calculates the TPS of your computer"
